core/include/foundry_local_mobile/flm_api.h

/** Absolute on-disk path. Caller frees with flm_string_free(). */
FLM_EXPORT flm_status FLM_CALL flm_model_get_path(flm_model model, char** out_path) FLM_NOEXCEPT;
/**
 * Load the model into memory (if not already loaded).
 *
 * `options_json` may be NULL, or `{ "execution_provider": "QNN" }` to override
 * the automatically selected placement.
 */
FLM_EXPORT flm_status FLM_CALL flm_model_load_async(flm_model model, const char* options_json,
                                                    flm_progress_callback on_progress,
                                                    flm_completion_callback on_complete, void* user_data,
                                                    flm_job* out_job) FLM_NOEXCEPT;
/** Unload the model, releasing its memory. Active sessions are stopped first. */
FLM_EXPORT flm_status FLM_CALL flm_model_unload_async(flm_model model, flm_completion_callback on_complete,
                                                      void* user_data, flm_job* out_job) FLM_NOEXCEPT;
/* =========================================================================
 * Sessions
 * ========================================================================= */

/**
 * Create an inference session over a loaded model.
 *
 * `options_json` may be NULL, or:
 * {
 *   "type": "chat",                  // "chat" | "audio" | "embedding", default "chat"
 *   "system_prompt": "You are ...",  // chat only
 *   "temperature": 0.7,
 *   "top_p": 0.95,
 *   "top_k": 40,
 *   "max_output_tokens": 512,
 *   "seed": 42,
 *   "language": "en",                // audio only
 *   "keep_history": true             // chat only, default true
 * }
 */
FLM_EXPORT flm_status FLM_CALL flm_session_create(flm_model model, const char* options_json,
                                                  flm_session* out_session) FLM_NOEXCEPT;
/** Release a session and free its KV cache. Cancels any in-flight request. */
FLM_EXPORT flm_status FLM_CALL flm_session_release(flm_session session) FLM_NOEXCEPT;
/** Apply option changes to an existing session. Same schema as flm_session_create. */
FLM_EXPORT flm_status FLM_CALL flm_session_set_options(flm_session session, const char* options_json) FLM_NOEXCEPT;
/** Run a chat completion, streaming deltas to `on_delta`. */
FLM_EXPORT flm_status FLM_CALL flm_session_complete_async(flm_session session, const char* request_json,
                                                          flm_delta_callback on_delta,
                                                          flm_completion_callback on_complete, void* user_data,
                                                          flm_job* out_job) FLM_NOEXCEPT;
/** Supply results for tool calls the model requested. */
FLM_EXPORT flm_status FLM_CALL flm_session_submit_tool_results_async(flm_session session, const char* tool_results_json,
                                                                     flm_delta_callback on_delta,
                                                                     flm_completion_callback on_complete,
                                                                     void* user_data, flm_job* out_job) FLM_NOEXCEPT;
/** Transcribe audio with a loaded speech model. */
FLM_EXPORT flm_status FLM_CALL flm_session_transcribe_async(flm_session session, const char* request_json,
                                                            flm_delta_callback on_delta,
                                                            flm_completion_callback on_complete, void* user_data,
                                                            flm_job* out_job) FLM_NOEXCEPT;
/** Push PCM audio into a live transcription session. */
FLM_EXPORT flm_status FLM_CALL flm_session_push_audio(flm_session session, const void* pcm_data, size_t byte_count,
                                                      int32_t sample_rate, int32_t channels,
                                                      int32_t is_final) FLM_NOEXCEPT;
/** Compute embeddings. */
FLM_EXPORT flm_status FLM_CALL flm_session_embed_async(flm_session session, const char* request_json,
                                                       flm_completion_callback on_complete, void* user_data,
                                                       flm_job* out_job) FLM_NOEXCEPT;
/** Number of completed turns in a chat session's history. */
FLM_EXPORT flm_status FLM_CALL flm_session_get_turn_count(flm_session session, size_t* out_count) FLM_NOEXCEPT;
/** Drop the last `count` turns from history and rewind the generator state. */
FLM_EXPORT flm_status FLM_CALL flm_session_undo_turns(flm_session session, size_t count) FLM_NOEXCEPT;
/** Clear all conversation history, keeping the session and its options. */
FLM_EXPORT flm_status FLM_CALL flm_session_clear_history(flm_session session) FLM_NOEXCEPT;
/** Serialize conversation history for persistence. Caller frees. */
FLM_EXPORT flm_status FLM_CALL flm_session_export_history_json(flm_session session, char** out_json) FLM_NOEXCEPT;
/** Restore history previously produced by flm_session_export_history_json(). */
FLM_EXPORT flm_status FLM_CALL flm_session_restore_history_json(flm_session session,
                                                                const char* history_json) FLM_NOEXCEPT;
/* =========================================================================
 * Jobs
 * ========================================================================= */

/** Current state of a job. */
FLM_EXPORT flm_status FLM_CALL flm_job_get_state(flm_job job, flm_job_state* out_state) FLM_NOEXCEPT;
/** Request cancellation. The completion callback fires with FLM_ERROR_CANCELLED. */
FLM_EXPORT flm_status FLM_CALL flm_job_cancel(flm_job job) FLM_NOEXCEPT;