core/include/foundry_local_mobile/flm_types.h

typedef flm_handle flm_job;      ///< An in-flight asynchronous operation.
/* -------------------------------------------------------------------------
 * Status codes
 *
 * Every entry point returns flm_status. On a non-OK return, call
 * flm_last_error_message() / flm_last_error_detail_json() on the *same thread*
 * for details.
 * ------------------------------------------------------------------------- */

typedef enum flm_status {
  FLM_OK = 0,
  FLM_ERROR_INTERNAL = 1,           ///< Unexpected failure inside the runtime.
  FLM_ERROR_INVALID_ARGUMENT = 2,   ///< A NULL pointer, malformed JSON or out-of-range value.
  FLM_ERROR_INVALID_HANDLE = 3,     ///< Handle is unknown, released, or of the wrong type.
  FLM_ERROR_INVALID_STATE = 4,      ///< Operation is not legal right now (e.g. infer before load).
  FLM_ERROR_NOT_FOUND = 5,          ///< Model, alias, variant or tool does not exist.
  FLM_ERROR_NOT_IMPLEMENTED = 6,    ///< Not supported on this platform or runtime build.
  FLM_ERROR_CANCELLED = 7,          ///< Cancelled via flm_job_cancel or a callback returning non-zero.
  FLM_ERROR_NETWORK = 8,            ///< Catalog query or download transport failure.
  FLM_ERROR_STORAGE = 9,            ///< Filesystem failure, or insufficient free space.
  FLM_ERROR_OUT_OF_MEMORY = 10,     ///< Allocation failed, or the OS refused the model's footprint.
  FLM_ERROR_INCOMPATIBLE = 11,      ///< No model-package variant is runnable on this device.
  FLM_ERROR_TIMEOUT = 12,           ///< A bounded wait expired.
  FLM_ERROR_UNSUPPORTED_VERSION = 13,  ///< Struct `version` is newer than this build understands.
  FLM_ERROR_MEMORY_PRESSURE = 14,   ///< The OS reclaimed the model; reload and retry.
  FLM_ERROR_SHUTDOWN = 15,          ///< The manager is shutting down; no new work is accepted.
} flm_status;
typedef struct flm_progress {
  uint32_t version;              ///< FLM_API_VERSION.
  float percent;                 ///< 0.0 – 100.0.
  int64_t completed_bytes;       ///< FLM_UNKNOWN_SIZE when not byte-based.
  int64_t total_bytes;           ///< FLM_UNKNOWN_SIZE when the total is not known yet.
  int64_t bytes_per_second;      ///< Smoothed transfer rate; FLM_UNKNOWN_SIZE when unavailable.
  int64_t eta_ms;                ///< Estimated time remaining; FLM_UNKNOWN_SIZE when unavailable.
  const char* stage;             ///< Borrowed, valid only for the duration of the callback.
  const char* detail;            ///< Optional item being processed (e.g. a variant id). May be NULL.
} flm_progress;
/**
 * A single streaming event.
 *
 * All `const char*` members are **borrowed** and valid only for the duration of the
 * callback. Copy anything you need to retain. Strings are UTF-8 and may contain
 * embedded NULs only if the paired length field says so.
 */
typedef struct flm_delta {
  uint32_t version;                 ///< FLM_API_VERSION.
  flm_delta_kind kind;
  const char* text;                 ///< TEXT / REASONING / SPEECH_*: the fragment. May be NULL.
  size_t text_length;               ///< Byte length of `text`, excluding any terminator.
  const char* tool_call_id;         ///< TOOL_CALL only.
  const char* tool_name;            ///< TOOL_CALL only.
  const char* tool_arguments_json;  ///< TOOL_CALL only; JSON object.
  int64_t start_time_ms;            ///< SPEECH_*: offset from the start of the audio.
  int64_t end_time_ms;              ///< SPEECH_*: offset from the start of the audio.
  int64_t prompt_tokens;            ///< USAGE / COMPLETED.
  int64_t completion_tokens;        ///< USAGE / COMPLETED.
  flm_finish_reason finish_reason;  ///< COMPLETED only.
} flm_delta;
/* -------------------------------------------------------------------------
 * Callbacks
 *
 * All callbacks are invoked on a core job-pool thread, never on the caller's thread.
 * They must not block for long and must not re-enter the ABI with the same job handle
 * (other handles are fine). Bindings are responsible for hopping to the appropriate
 * dispatch queue / coroutine context / isolate.
 *
 * LIFETIME, and the most common way to get this wrong: every struct and string handed
 * to a callback is borrowed and valid ONLY for the duration of that call. The core
 * builds them on the stack of the calling thread and destroys them the moment the
 * callback returns. A binding that hands the raw pointer to another thread, queue or
 * isolate and reads it there is reading freed memory. Copy everything you need out
 * before returning — which, on the streaming delta path, means copying per token.
 * ------------------------------------------------------------------------- */

/**
 * Progress notification. Return non-zero to request cancellation of the job.
 *
 * `progress` and its strings are borrowed for the duration of the call only.
 */
typedef int32_t(FLM_CALLBACK* flm_progress_callback)(flm_job job, const flm_progress* progress, void* user_data);
/**
 * Streaming event. Return non-zero to request cancellation of the job.
 *
 * `delta` and its strings are borrowed for the duration of the call only.
 */
typedef int32_t(FLM_CALLBACK* flm_delta_callback)(flm_job job, const flm_delta* delta, void* user_data);
/**
 * Terminal notification for a job. Invoked exactly once per job, even on cancellation.
 *
 * `error_json` is NULL when `status` is FLM_OK; otherwise it is a borrowed UTF-8 JSON
 * object of the shape produced by flm_last_error_detail_json(), valid for the duration
 * of the call only.
 *
 * After this returns, the job's result (if any) can still be read with
 * flm_job_take_result_json until flm_job_release is called.
 */
typedef void(FLM_CALLBACK* flm_completion_callback)(flm_job job, flm_status status, const char* error_json,
                                                    void* user_data);