bindings/flutter/lib/src/bindings/bindings.dart


  int flm_model_get_path(
    int model,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_path,
  ) =>
      _flm_model_get_path(model, out_path);
  late final _flm_model_get_pathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('flm_model_get_path');
  late final _flm_model_get_path = _flm_model_get_pathPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>(isLeaf: true);

  int flm_model_load_async(
    int model,
    ffi.Pointer<ffi.Char> options_json,
    flm_progress_callback on_progress,
    flm_completion_callback on_complete,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Uint64> out_job,
  ) =>
      _flm_model_load_async(
          model, options_json, on_progress, on_complete, user_data, out_job);
  late final _flm_model_load_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              flm_progress_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>>('flm_model_load_async');
  late final _flm_model_load_async = _flm_model_load_asyncPtr.asFunction<
      int Function(
          int,
          ffi.Pointer<ffi.Char>,
          flm_progress_callback,
          flm_completion_callback,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  int flm_model_unload_async(
    int model,
    flm_completion_callback on_complete,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Uint64> out_job,
  ) =>
      _flm_model_unload_async(model, on_complete, user_data, out_job);
  late final _flm_model_unload_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>>('flm_model_unload_async');
  late final _flm_model_unload_async = _flm_model_unload_asyncPtr.asFunction<
      int Function(
          int,
          flm_completion_callback,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  // ---------------------------------------------------------------------------
  // Sessions
  // ---------------------------------------------------------------------------

  int flm_session_create(
    int model,
    ffi.Pointer<ffi.Char> options_json,
    ffi.Pointer<ffi.Uint64> out_session,
  ) =>
      _flm_session_create(model, options_json, out_session);
  late final _flm_session_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint64>)>>('flm_session_create');
  late final _flm_session_create = _flm_session_createPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  int flm_session_release(int session) => _flm_session_release(session);
  late final _flm_session_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'flm_session_release');
  late final _flm_session_release =
      _flm_session_releasePtr.asFunction<int Function(int)>(isLeaf: true);

  int flm_session_set_options(
    int session,
    ffi.Pointer<ffi.Char> options_json,
  ) =>
      _flm_session_set_options(session, options_json);
  late final _flm_session_set_optionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Char>)>>('flm_session_set_options');
  late final _flm_session_set_options = _flm_session_set_optionsPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>(isLeaf: true);

  int flm_session_complete_async(
    int session,
    ffi.Pointer<ffi.Char> request_json,
    flm_delta_callback on_delta,
    flm_completion_callback on_complete,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Uint64> out_job,
  ) =>
      _flm_session_complete_async(
          session, request_json, on_delta, on_complete, user_data, out_job);
  late final _flm_session_complete_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              flm_delta_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>>('flm_session_complete_async');
  late final _flm_session_complete_async =
      _flm_session_complete_asyncPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Char>,
              flm_delta_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  int flm_session_submit_tool_results_async(
    int session,
    ffi.Pointer<ffi.Char> tool_results_json,
    flm_delta_callback on_delta,
    flm_completion_callback on_complete,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Uint64> out_job,
  ) =>
      _flm_session_submit_tool_results_async(
          session,
          tool_results_json,
          on_delta,
          on_complete,
          user_data,
          out_job);
  late final _flm_session_submit_tool_results_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              flm_delta_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>>(
      'flm_session_submit_tool_results_async');
  late final _flm_session_submit_tool_results_async =
      _flm_session_submit_tool_results_asyncPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Char>,
              flm_delta_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  int flm_session_transcribe_async(
    int session,
    ffi.Pointer<ffi.Char> request_json,
    flm_delta_callback on_delta,
    flm_completion_callback on_complete,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Uint64> out_job,
  ) =>
      _flm_session_transcribe_async(
          session, request_json, on_delta, on_complete, user_data, out_job);
  late final _flm_session_transcribe_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              flm_delta_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>>('flm_session_transcribe_async');
  late final _flm_session_transcribe_async =
      _flm_session_transcribe_asyncPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Char>,
              flm_delta_callback,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  int flm_session_push_audio(
    int session,
    ffi.Pointer<ffi.Void> pcm_data,
    int byte_count,
    int sample_rate,
    int channels,
    int is_final,
  ) =>
      _flm_session_push_audio(
          session, pcm_data, byte_count, sample_rate, channels, is_final);
  late final _flm_session_push_audioPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Int32,
              ffi.Int32,
              ffi.Int32)>>('flm_session_push_audio');
  late final _flm_session_push_audio = _flm_session_push_audioPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Void>, int, int, int, int)>(isLeaf: true);

  int flm_session_embed_async(
    int session,
    ffi.Pointer<ffi.Char> request_json,
    flm_completion_callback on_complete,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Uint64> out_job,
  ) =>
      _flm_session_embed_async(
          session, request_json, on_complete, user_data, out_job);
  late final _flm_session_embed_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64,
              ffi.Pointer<ffi.Char>,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>>('flm_session_embed_async');
  late final _flm_session_embed_async =
      _flm_session_embed_asyncPtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Char>,
              flm_completion_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint64>)>(isLeaf: true);

  int flm_session_get_turn_count(
    int session,
    ffi.Pointer<ffi.Size> out_count,
  ) =>
      _flm_session_get_turn_count(session, out_count);
  late final _flm_session_get_turn_countPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Size>)>>('flm_session_get_turn_count');
  late final _flm_session_get_turn_count = _flm_session_get_turn_countPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Size>)>(isLeaf: true);

  int flm_session_undo_turns(int session, int count) =>
      _flm_session_undo_turns(session, count);
  late final _flm_session_undo_turnsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64, ffi.Size)>>('flm_session_undo_turns');
  late final _flm_session_undo_turns = _flm_session_undo_turnsPtr
      .asFunction<int Function(int, int)>(isLeaf: true);

  int flm_session_clear_history(int session) =>
      _flm_session_clear_history(session);
  late final _flm_session_clear_historyPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'flm_session_clear_history');
  late final _flm_session_clear_history =
      _flm_session_clear_historyPtr.asFunction<int Function(int)>(isLeaf: true);

  int flm_session_export_history_json(
    int session,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_json,
  ) =>
      _flm_session_export_history_json(session, out_json);
  late final _flm_session_export_history_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('flm_session_export_history_json');
  late final _flm_session_export_history_json =
      _flm_session_export_history_jsonPtr.asFunction<
          int Function(int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>(isLeaf: true);

  int flm_session_restore_history_json(
    int session,
    ffi.Pointer<ffi.Char> history_json,
  ) =>
      _flm_session_restore_history_json(session, history_json);
  late final _flm_session_restore_history_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Uint64,
              ffi.Pointer<ffi.Char>)>>('flm_session_restore_history_json');
  late final _flm_session_restore_history_json =
      _flm_session_restore_history_jsonPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>(isLeaf: true);

  // ---------------------------------------------------------------------------
  // Jobs
  // ---------------------------------------------------------------------------

  int flm_job_get_state(int job, ffi.Pointer<ffi.Int32> out_state) =>
      _flm_job_get_state(job, out_state);
  late final _flm_job_get_statePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Uint64, ffi.Pointer<ffi.Int32>)>>('flm_job_get_state');
  late final _flm_job_get_state = _flm_job_get_statePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int32>)>(isLeaf: true);

  int flm_job_cancel(int job) => _flm_job_cancel(job);
  late final _flm_job_cancelPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Uint64)>>(
          'flm_job_cancel');
  late final _flm_job_cancel =
      _flm_job_cancelPtr.asFunction<int Function(int)>(isLeaf: true);
